# codetime-readme

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README.ru.md  TODO.md  action.yml  docker-compose.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
src/: constants.ts  deps.ts  helpers.ts  main.ts  types.ts
