[tool.poetry]
name = "codetime-readme"
version = "0.1.0"
description = ""
authors = ["xafec <wivvz@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygithub = "^2.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
